# RuSseL1D_dev

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  clean.sh
bench/: RSL1D  test_mxb.xlsx
bench/20241110_blend_test_v2/: solvation_blend.xlsx
bench/Cinfmxa2/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/Nmxa200/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/Nmxa200_Nmxb200/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/chi_HFD/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/chi_inc/: in.input_HFD  in.input_inc  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.log_HFD  o.log_inc  o.phi_HFD  o.phi_inc  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/chi_inc_20240409/: 1  in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/chi_inc_dimitris/: in.input  o.Usolid  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/chi_inc_gloa_mxb/: in.input  o.brush_thickness_gra_lo  o.chain_shape_gra_lo  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_gra_lo  o.phi_segs_mxb___  o.phi_states_mxb___  o.q_gra_lo  o.q_mxb___
bench/chi_inc_io/: b.log_1050  b.log_read  in.input_init  in.input_read
bench/chi_inc_liliput/: .auto.sh.swp  all.paste.csv  auto.sh  clean.sh  in.input  in.input_conv  o.Usolid  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field0  o.field1  o.field10  o.field100  o.field11  o.field110  o.field12  o.field120  o.field13  o.field130  o.field14  o.field140  o.field15  o.field150  o.field16  o.field160  o.field17  o.field170  o.field18  o.field180  o.field19  o.field190  o.field2  o.field20  o.field200  o.field21  o.field210  o.field22  o.field220  o.field23  (+286 more)
bench/chi_inc_rand/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/fishel/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/mxaNeumann_mxbNeumann/: in.input  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_states_matrix  o.q_mxb___
bench/mxadir0_mxbdir0/: in.input  o.chain_shape_matrix  o.energies  o.equimolar_total_  o.field  o.phi  o.phi_segs_matrix  o.phi_states_matrix  o.q_matrix
bench/ref/: in.input  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.phi  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
bench/temp_scheme_mix_dens/: in.input_HFD  o.chain_shape_matrix  o.chain_shape_mxb___  o.energies  o.field  o.field_mixing  o.log_mix  o.phi_mix  o.phi_segs_matrix  o.phi_segs_mxb___  o.phi_states_matrix  o.phi_states_mxb___  o.q_matrix  o.q_mxb___
doc/: CHANGES.txt  TODO_LIST.txt
examples/planar_GMG_SLSGT_glo0.008_Nlo50_ghi0.004_Nhi200_Nm100/: README  in.input
examples/planar_GMV_SLSGT_glo0.004_Nlo50_Nm100/: README  in.input
examples/planar_SMS_SLSGT_Nm100_ra60/: README  in.input
examples/planar_SM_HFD_Nm100_sqwell_kT1.65/: README  in.input
examples/planar_SM_HFD_Nm100_table/: README  in.input  in.table
examples/planar_VM_SLSGT_Nm100/: README  in.input
examples/spherical_GM_SLSGT_glo0.008_Nlo50_Nm100/: README  in.input
examples/spherical_GV_SLSGT_glo0.008_Nlo50/: README  in.input
scripts/: test_integrity_RuSseL1D.sh
src/: CMakeLists.txt  arrays.f90  compute_brush_thickness.f90  compute_chainshape.f90  compute_energies.f90  compute_energies_compressible.f90  compute_energies_incompressible.f90  compute_equimolar.f90  compute_matrix_ads_free.f90  compute_phi_ads_states.f90  compute_phi_end_middle.f90  compute_phi_seg.f90  constants.f90  contour_convolution.f90  convolution.f90  edwards.f90  energies.f90  eos.f90  export_computes.f90  export_field.f90  export_field_binary.f90  export_phi.f90  export_q.f90  flags.f90  force_fields.f90  generate_mesh.f90  get_auto_wall_pos.f90  get_nchains.f90  get_part_func.f90  in.input  in.table  init_arrays.f90  init_field.f90  init_geom.f90  init_mesh.f90  init_scf_params.f90  init_solid.f90  integr_coeffs.f90  invrsmtx.f90  main.f90  (+8 more)
test_integrity/: in.input_PE_HF  in.input_PE_SL  in.input_PE_SL_GRAD_NEW  in.input_PS_HF  in.input_PS_SL_GRAD_NEW  in.input_PS_sqwell  input.in.txt_PE_SL_GRAD  test_integrity.sh
test_integrity/0.ps_fg_sph_ham_it1/: LOG_LIST  in.input  o.Usolid  o.ads_free_loop_tail  o.brush_thickness_gra_lo  o.chain_shape_gra_lo  o.chain_shape_matrix  o.energies  o.field  o.phi  o.phi_segs_gra_lo  o.phi_segs_matrix  o.phi_states_matrix  o.q_gra_lo  o.q_matrix  o.scft
test_integrity/1.ps_fg_sph_ham/: in.input  o.ads_free_loop_tail  o.brush_thickness_gra_lo  o.chain_shape_gra_lo  o.chain_shape_matrix  o.energies  o.field  o.phi  o.phi_segs_gra_lo  o.phi_segs_matrix  o.phi_states_matrix  o.q_gra_lo  o.q_matrix  o.scft
test_integrity/10.test_with_tolis_w_sqgrad/: LOG_LIST  in.input  o.brush_thickness_gra_lo  o.chain_shape_gra_lo  o.energies  o.field  o.phi  o.scft
tools/: a.out  field_mod.f90  init_field.f90  merge_prof.py  opt_iso.py  opt_matrix.py  scan_lx.py  scripts.sh
(+335 files in other folders)
